[gd_scene load_steps=7 format=3 uid="uid://c8nxcydubdyxs"]

[ext_resource type="Script" path="res://scenes/session/ui/outlinerItem.gd" id="1_62g1c"]
[ext_resource type="Texture2D" uid="uid://f15d6nn128u3" path="res://media/icons/image.svg" id="1_df2pd"]
[ext_resource type="LabelSettings" uid="uid://drsgn7q2feum" path="res://media/subtext.tres" id="2_3dioa"]
[ext_resource type="Texture2D" uid="uid://bfq0m3g6qyv6c" path="res://media/icons/visible.svg" id="3_8fm4a"]
[ext_resource type="Texture2D" uid="uid://bhh64vy84apvd" path="res://media/icons/unlocked.svg" id="4_sd38u"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3me2c"]
bg_color = Color(0.0901961, 0.0901961, 0.0901961, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.188235, 0.188235, 0.188235, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="outlinerItem" type="Panel"]
self_modulate = Color(1, 1, 1, 0)
visibility_layer = 1024
custom_minimum_size = Vector2(0, 30)
offset_right = 226.0
offset_bottom = 30.0
mouse_default_cursor_shape = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_3me2c")
script = ExtResource("1_62g1c")

[node name="marginContainer" type="MarginContainer" parent="."]
visibility_layer = 1024
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 3

[node name="hBoxContainer" type="HBoxContainer" parent="marginContainer"]
visibility_layer = 1024
layout_mode = 2
theme_override_constants/separation = 0

[node name="type" type="TextureRect" parent="marginContainer/hBoxContainer"]
unique_name_in_owner = true
visibility_layer = 1024
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("1_df2pd")
expand_mode = 2

[node name="label" type="Label" parent="marginContainer/hBoxContainer"]
unique_name_in_owner = true
visibility_layer = 1024
layout_mode = 2
size_flags_horizontal = 3
text = "Filasdasdasdasde.png"
label_settings = ExtResource("2_3dioa")
clip_text = true
text_overrun_behavior = 3

[node name="visibility" type="Button" parent="marginContainer/hBoxContainer"]
unique_name_in_owner = true
visibility_layer = 1024
layout_mode = 2
size_flags_horizontal = 8
tooltip_text = "Toggle visibility"
mouse_default_cursor_shape = 2
icon = ExtResource("3_8fm4a")
flat = true

[node name="lock" type="Button" parent="marginContainer/hBoxContainer"]
unique_name_in_owner = true
visibility_layer = 1024
layout_mode = 2
tooltip_text = "Toggle lock"
mouse_default_cursor_shape = 2
icon = ExtResource("4_sd38u")
flat = true

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="pressed" from="marginContainer/hBoxContainer/visibility" to="." method="_on_visibility_pressed"]
[connection signal="pressed" from="marginContainer/hBoxContainer/lock" to="." method="_on_lock_pressed"]
